Remove /api/v1 route prefix
