# mt5api/routers/account.py
@@ -20,7 +20,7 @@ if TYPE_CHECKING:
     from fastapi.responses import Response
 
 router = APIRouter(
-    prefix="/api/v1",
+    prefix="",
     tags=["account"],
     dependencies=[Depends(verify_api_key)],
 )
